style: change current progress hover effect fix(client): category dot gets crushed on category list fix(client): expanding register on LogIn.jsx throws error style: change border color for dark mode style: remove task hover effect

--- a/client/src/components/indicators/CurrentProgress/CurrentProgress.module.scss
+++ b/client/src/components/indicators/CurrentProgress/CurrentProgress.module.scss
@@ -12,16 +12,6 @@
     align-items: center;
     background-color: var(--surface-color);
     flex-shrink: 0;
-    transition: transform 0.2s;
-    transform-origin: center center;
-
-    &:hover {
-        transform: scale(1.1);
-    }
-
-    &:active {
-        transform: scale(1.0);
-    }
 }
 
 .outlineContainer {
@@ -43,6 +33,14 @@
     align-items: center;
     justify-content: center;
     gap: 10px;
+
+    &:hover > .numberButton {
+        transform: scale(1.1);
+    }
+
+    &:active > .numberButton {
+        transform: scale(1.0);
+    }
 }
 
 circle {
@@ -119,4 +117,9 @@ circle {
 
 .checkBoxContainer {
     font-size: 1.5em;
+}
+
+.numberButton {
+    transition: transform 0.2s ease-in-out;
+    transform-origin: center center;
 }
