--- a/client/src/components/indicators/Task/Task.module.scss
+++ b/client/src/components/indicators/Task/Task.module.scss
@@ -3,7 +3,7 @@
 @use '@/styles/mixins' as m;
 
 .container {
-  @extend .Rounded-Container, .Stack-Container, .Has-Shadow, .Has-Hover;
+  @extend .Rounded-Container, .Stack-Container, .Has-Shadow;
 
   display: inline-flex;
   position: relative;
