--- a/client/src/styles/variables.scss
+++ b/client/src/styles/variables.scss
@@ -46,7 +46,7 @@ $theme: 'light';
         --on-success-color: #ffffff;
         --info-color: #1f78d1;
         --on-info-color: #ffffff;
-        --border-primary-color: #242424;
+        --border-primary-color: #2f2f2f;
 
         --red-color: #EA2027;
         --orange-color: #EE5A24;
